--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "gulp-babel": "^5.1.0",
     "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.1.1",
+    "gulp-util": "^3.0.6",
     "karma": "^0.12.36",
     "karma-browserify": "^4.2.1",
     "karma-chai": "^0.1.0",
     "karma-detect-browsers": "^2.0.0",
     "karma-mocha": "^0.1.10",
     "karma-sauce-launcher": "^0.2.11",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "superstack": "0.0.4"
   }
 }
